# copper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: export_hf_fixtures.py  run_gpt2_python.py
src/: config.rs  generate.rs  lib.rs  loader.rs  main.rs  tokenizer.rs
src/model/: cache.rs  mod.rs  ops.rs
tests/: kv_cache.rs  logits_hf.rs  tokenizer_hf.rs
tests/common/: mod.rs
tests/fixtures/: README.md
