[package]
name = "copper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle-core = "0.8"
candle-nn = "0.8"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
